--- a/assets/simplemde.publish.css
+++ b/assets/simplemde.publish.css
@@ -94,3 +94,7 @@ color: black !important;
 text-decoration: none !important;
 border-bottom: 1px solid #3f69a5;
 }
+
+body .CodeMirror-wrap pre {
+word-break: break-all;
+}
