--- a/assets/simplemde.publish.css
+++ b/assets/simplemde.publish.css
@@ -95,6 +95,7 @@ text-decoration: none !important;
 border-bottom: 1px solid #3f69a5;
 }
 
-body .CodeMirror-wrap pre .cm-url {
+body .CodeMirror-wrap pre .cm-url,
+body .CodeMirror-wrap pre .cm-link {
 word-break: break-all;
 }
