<release version="1.0.2" date="2020-04-09" min="2.6" max="2.x.x">

--- a/assets/simplemde.publish.css
+++ b/assets/simplemde.publish.css
@@ -99,3 +99,7 @@ body .CodeMirror-wrap pre .cm-url,
 body .CodeMirror-wrap pre .cm-link {
 word-break: break-all;
 }
+
+body .CodeMirror pre {
+padding: 1px 4px;
+}
