--- a/assets/simplemde.publish.css
+++ b/assets/simplemde.publish.css
@@ -10,9 +10,11 @@
 }
 
 /* Editor font */
-.CodeMirror {
+body .CodeMirror {
   font-size: 1em;
   line-height: 1.45em;
+  border-radius: .3em;
+  border-color: rgba(0,0,0,.3);
 }
 
 /* Heading size */
@@ -54,9 +56,9 @@
 .editor-toolbar {
   margin-top: 0.2rem;
   opacity: 1 !important;
-  border-color: rgba(0, 0, 0, 0.25);
-  background-color: rgb(246, 246, 246);
+  background-color: rgba(255,255,255,.5);
   padding: 0.3rem 0.5rem 0.3rem 0.5rem;
+  border: none;
 }
 
 .editor-toolbar::before,
@@ -65,7 +67,6 @@
 }
 
 .editor-toolbar a {
-  height: 3rem;
   width: 3rem;
   opacity: 1;
   color: rgba(85, 85, 85, 0.75) !important; 
