--- a/assets/simplemde.publish.css
+++ b/assets/simplemde.publish.css
@@ -56,8 +56,8 @@ body .CodeMirror {
 .editor-toolbar {
   margin-top: 0.2rem;
   opacity: 1 !important;
-  background-color: rgba(255,255,255,.5);
-  padding: 0.3rem 0.5rem 0.3rem 0.5rem;
+  background-color: transparent;
+  padding: 0.3rem 0.5rem 0.3rem 0;
   border: none;
 }
 
